FIX ISOS on buy simulator drawer + edit configuring profile now shows properly + fixes updating errors

--- a/src/app/shared/price-plan-drawer/price-plan-drawer.component.html
+++ b/src/app/shared/price-plan-drawer/price-plan-drawer.component.html
@@ -54,14 +54,14 @@
       @if (hasProfile) {
         <p class="mt-6 text-sm text-gray-500 dark:text-gray-400">This price plan has an associate profile. That means that the following characteristics are already set for you.</p>
         <div class="rounded-lg border border-dashed border-primary-100 bg-white p-2 m-2 dark:bg-gray-800">
-          @for (ch of characteristics ; track ch.id) {
+          @for (ch of filteredCharacteristics ; track ch.id) {
             <app-characteristic [characteristic]="ch" [readOnly]="true" (valueChange)="onValueChange($event)"></app-characteristic>
           }
         </div>
       } @else {
         <p class="mt-6 text-sm text-gray-500 dark:text-gray-400">Please select the characteristics you need to suit this offer to you.</p>
         <div class="rounded-lg border border-dashed border-primary-100 bg-white p-2 m-2 dark:bg-gray-800">
-          @for (ch of characteristics ; track ch.id) {
+          @for (ch of filteredCharacteristics ; track ch.id) {
             <app-characteristic [characteristic]="ch" [readOnly]="false" (valueChange)="onValueChange($event)"></app-characteristic>
           }
         </div>
