--- a/src/app/pages/seller-offerings/offerings/seller-offer/update-price-plan/update-price-plan.component.html
+++ b/src/app/pages/seller-offerings/offerings/seller-offer/update-price-plan/update-price-plan.component.html
@@ -221,6 +221,7 @@
                 <select id="type" (change)="onPriceTypeSelected($event)" class="mb-2 col-span-2 w-1/3 shadow bg-white dark:bg-secondary-300 border border-gray-300 text-gray-900 dark:border-secondary-200 dark:text-white text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
                     <option value="ONE TIME">ONE TIME</option>
                     <option value="RECURRING">RECURRING</option>
+                    <option value="RECURRINGPREPAID">RECURRING-PREPAID</option>
                     <option value="USAGE">USAGE</option>          
                 </select>
                 <div>
@@ -228,7 +229,7 @@
                     <input formControlName="price" type="number" pattern="[0-9]*.[0-9]*" step="0.1"                        
                     class="mb-2 bg-gray-50 dark:bg-secondary-300 border border-gray-300 text-gray-900 dark:border-secondary-200 dark:text-white text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" />
                 </div>
-                @if(recurringSelected){
+                @if(recurringSelected||recurringPrepaidSelected){
                     <label class="font-bold text-lg dark:text-white">Recurring every</label>
                     <div class="flex flex-row">                        
                         <input formControlName="recurring" type="number" pattern="[0-9]"                      
