Improve style of inventory products

--- a/src/app/pages/product-inventory/inventory-items/inventory-products/inventory-products.component.html
+++ b/src/app/pages/product-inventory/inventory-items/inventory-products/inventory-products.component.html
@@ -160,7 +160,7 @@
                                 }
                             </div>
                             </div>
-                            @if(inv.price){
+                            <!--@if(inv.price){
                                 @if(inv.price.priceType=='custom'){
                                     <div class="flex flex-col place-content-center items-baseline mb-5 w-full">
                                         <div class="flex place-content-center items-baseline w-full">
@@ -181,7 +181,7 @@
                                     <span class="text-2xl font-bold text-gray-900 mr-1 dark:text-white">{{ 'SHOPPING_CART._free' | translate }}</span>
                                     </div>
                                 </div>
-                            }
+                            }-->
                             </div>
                         </div>
                         </div>
