Add country field in org profile

--- a/src/app/pages/user-profile/profile-sections/org-info/org-info.component.html
+++ b/src/app/pages/user-profile/profile-sections/org-info/org-info.component.html
@@ -21,6 +21,15 @@
                 <input type="text" formControlName="website" id="website"
                 class="mb-2 bg-gray-50 border border-gray-300 text-gray-900 dark:bg-secondary-300 dark:border-secondary-200 dark:text-white text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" />    
             </div>
+            <div>
+                <span class="font-bold dark:text-white">{{ 'PROFILE._country' | translate }}</span>
+                <select id="country" formControlName="country" class=""class="mb-2 bg-gray-50 border border-gray-300 text-gray-900 dark:bg-secondary-300 dark:border-secondary-200 dark:text-white text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+                    <option *ngFor="let country of euCountries" [value]="country.code">
+                      {{ country.name }}
+                    </option>
+                </select>
+            </div>
+
             <label for="prod-name" class="font-bold text-lg col-span-2 dark:text-white">{{ 'UPDATE_OFFER._description' | translate }}</label>
             <div class="w-full col-span-2 mb-4 border border-gray-200 rounded-lg bg-gray-50 dark:bg-secondary-200 dark:border-secondary-200">
                 <div class="flex items-center justify-between px-3 py-2 border-b">
