--- a/src/app/pages/seller-offerings/offerings/seller-offer/update-price-plan/update-price-plan.component.html
+++ b/src/app/pages/seller-offerings/offerings/seller-offer/update-price-plan/update-price-plan.component.html
@@ -420,7 +420,7 @@
             </div>
             <div class="flex items-center mb-4">
                 <input id="default-checkbox" [checked]="isDomeManaged" (change)="changeDomeManaged()" type="checkbox" value="" class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
-                <label for="default-checkbox" class="ms-2 text-sm font-medium text-gray-900 dark:text-gray-300">Is this price DOME managed?</label>
+                <label for="default-checkbox" class="ms-2 text-sm font-medium text-gray-900 dark:text-gray-300">Is this product to be paid online?</label>
             </div>
             @if(isDomeManaged){
                 <label class="font-bold text-lg dark:text-white">Currency</label>
