FIX save relationship with no selected prod (Ticket#831295) + FIX License with long title (Ticket#831221) + FIX user can update proile with empty fields (Ticket#83933) + FIX user is able to create contact mediums wth empty fields (Ticket#831183)

--- a/src/app/pages/product-details/product-details.component.html
+++ b/src/app/pages/product-details/product-details.component.html
@@ -399,7 +399,7 @@
                         <div class="border border-gray-200 rounded-lg shadow bg-white dark:bg-secondary-200 dark:border-gray-800 p-8">
                             <div class="grid grid-cols-80/20 pb-4 h-1/4">
                                 <div class="flex justify-start">
-                                    <h2 class="text-gray-900 dark:text-white text-3xl font-extrabold mb-2">{{productOff?.productOfferingTerm?.at(0)?.name}}</h2>
+                                    <h2 class="text-gray-900 dark:text-white text-3xl font-extrabold mb-2 text-wrap break-all">{{productOff?.productOfferingTerm?.at(0)?.name}}</h2>
                                 </div>
                                 <div class="flex justify-end">
                                     <fa-icon [icon]="faScaleBalanced" class="fa-2xl text-primary-100 align-middle"></fa-icon>
