ADD close button to details modal + FIX header card's style + ADD register 3 links dropdown + ADD change landing offerings style

--- a/src/app/offerings/featured/featured.component.html
+++ b/src/app/offerings/featured/featured.component.html
@@ -91,7 +91,7 @@
     
           <div class="flex sticky top-[100vh] items-center justify-center align-items-bottom rounded-lg mt-4">
     
-            <button  type="button" class="flex items-center align-items-bottom text-white bg-primary-100 hover:bg-primary-50 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-100 dark:hover:bg-primary-50 dark:focus:ring-primary-100 mr-1">
+            <button  type="button" (click)="searchByCategory()" class="flex items-center align-items-bottom text-white bg-primary-100 hover:bg-primary-50 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-100 dark:hover:bg-primary-50 dark:focus:ring-primary-100 mr-1">
               <svg class="w-[18px] h-[18px] text-white mr-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 14">
                 <g stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2">
                   <path d="M10 10a3 3 0 1 0 0-6 3 3 0 0 0 0 6Z"/>
