--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -21,7 +21,12 @@
               </li>
               <li>
                 <a href="{{knowledge}}" target="_blank"  class="flex w-full justify-left px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">
-                  {{ 'HEADER._onboarding' | translate }}
+                  {{ 'HEADER._registration' | translate }}
+                </a>
+              </li>
+              <li>
+                <a href="{{knowledge}}" target="_blank"  class="flex w-full justify-left px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">
+                  {{ 'HEADER._guideline_publish' | translate }}
                 </a>
               </li>
           </ul>
