--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -17,23 +17,35 @@
               {{ 'DASHBOARD._browse_serv' | translate }}              
               </button>
             </div>
-            <div class="mt-4 md:mt-0 bg-secondary-300 bg-opacity-50 rounded-lg w-full md:w-1/4">
-              <div class="w-full p-8 rounded-lg shadow-lg ">
+            <div class="mt-4 md:mt-0 bg-secondary-300 bg-opacity-50 rounded-lg w-full md:w-1/4 h-[300px]">
+              <div class="w-full p-8 rounded-lg shadow-lg h-[300px]">
                 <div class="flex flex-col">
-                  <p class="mb-2 text-left text-lg font-normal lg:text-xl text-secondary-50">{{services.length}} verified services</p>
-                  @for(serv of services;track serv;let pos = $index){
-                    <a [ngClass]="{ 'hidden': currentIndexServ !== pos }" class="text-md text-wrap break-all mb-2 font-medium inline-flex items-center px-2.5 py-0.5 rounded-md text-primary-100 bg-secondary-50 w-fit animate-fadeInOut">
-                      {{serv}}
+                  <p class="mb-2 text-left text-lg font-normal lg:text-xl text-secondary-50 h-fit">{{services.length}} verified services</p>
+                  @for (serv of services; track serv; let pos = $index) {
+                    <a *ngIf="currentIndexServ === pos"
+                       [style.display]="'-webkit-box'"
+                       [style.webkitBoxOrient]="'vertical'"
+                       [style.webkitLineClamp]="'2'"
+                       class="text-md text-wrap break-all line-clamp-2 mb-2 font-medium block items-center 
+                              px-2.5 py-0.5 rounded-md text-primary-100 bg-secondary-50 w-fit animate-in">
+                      {{ serv }}
                     </a>
                   }
+                  
                 </div>
                 <div class="flex flex-col">
-                  <p class="mb-2 text-left text-lg font-normal lg:text-xl text-secondary-50">{{publishers.length}} registered publishers</p>
-                  @for(pub of publishers;track pub;let pos = $index){
-                    <a [ngClass]="{ 'hidden': currentIndexPub !== pos }" class="text-md text-wrap break-all font-medium inline-flex items-center px-2.5 py-0.5 rounded-md text-primary-100 bg-secondary-50 w-fit animate-fadeInOut">
-                      {{pub}}
+                  <p class="mb-2 text-left text-lg font-normal lg:text-xl text-secondary-50">{{publishers.length}} registered providers</p>
+                  @for (pub of publishers; track pub; let pos = $index) {
+                    <a *ngIf="currentIndexPub === pos"
+                    [style.display]="'-webkit-box'"
+                    [style.webkitBoxOrient]="'vertical'"
+                    [style.webkitLineClamp]="'2'"
+                       class="text-md text-wrap break-all line-clamp-2 font-medium block items-center 
+                              px-2.5 py-0.5 rounded-md text-primary-100 bg-secondary-50 w-fit animate-in">
+                      {{ pub }}
                     </a>
                   }
+                  
                 </div>
   
                 <a href="{{domeRegister}}" target="_blank" class="mt-8 inline-flex justify-center items-center py-3 px-5 text-base font-medium text-center text-white rounded-lg bg-primary-100 hover:bg-primary-50 focus:ring-4 focus:ring-primary-300 dark:focus:ring-primary-900">
