--- a/src/app/shared/card/card.component.html
+++ b/src/app/shared/card/card.component.html
@@ -99,18 +99,23 @@
 <!-- Main modal -->
 @if (showModal){
   <div id="details-modal" [ngClass]="showModal ? 'backdrop-blur-sm': ''" tabindex="-1" aria-hidden="true" class="flex justify-center overflow-x-hidden fixed top-0 right-0 left-0 z-40 justify-center items-center w-full md:inset-0 h-full max-h-full rounded-lg shadow-2xl">
-    <div class="relative w-full max-w-7xl max-h-full rounded-t-lg">
+    <div class="relative w-full max-w-7xl max-h-full rounded-t-lg" (click)="$event.stopPropagation();">
         <!-- Modal content -->
-        <div class="relative sm:m-8 bg-white rounded-lg shadow dark:border-gray-600 dark:bg-secondary-100 bg-cover bg-right-bottom rounded-lg overflow-y-auto max-h-[calc(100vh-10rem)]" (click)="$event.stopPropagation();">
-            <!--
-            <div class="flex items-center justify-between pr-2 pt-2 bg-secondary-50 rounded-t-lg dark:bg-white dark:border-gray-700 border-secondary-50">
+        <div class="relative sm:m-8 bg-white rounded-lg shadow dark:border-gray-600 dark:bg-secondary-100 bg-cover bg-right-bottom rounded-lg overflow-y-auto max-h-[calc(100vh-10rem)]">
+          <button (click)="hideModal();" type="button" class="absolute top-4 right-4 z-50 text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center dark:hover:bg-gray-600 dark:hover:text-white" data-modal-hide="details-modal">
+            <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
+                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"/>
+            </svg>
+            <span class="sr-only">{{ 'CARD._close' | translate }}</span>
+          </button>
+            <!--<div class="flex items-center justify-between pr-2 pt-2 bg-secondary-50 rounded-t-lg dark:bg-white dark:border-gray-700 border-secondary-50">
               <button (click)="hideModal()" type="button" class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center dark:hover:bg-gray-600 dark:hover:text-white" data-modal-hide="details-modal">
                   <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
                       <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"/>
                   </svg>
                   <span class="sr-only">{{ 'CARD._close' | translate }}</span>
               </button>
-            </div>Modal header -->
+            </div>-->
             <!-- Modal body -->
 
             <!-- START HEADER CARD -->
