Hidding task 40 until removing hardcoding

--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -79,8 +79,8 @@
     }    
   
     <!--<app-how-it-works></app-how-it-works>-->
-    <bae-off-featured></bae-off-featured>
-    <!--<bae-off-gallery></bae-off-gallery>-->
+    <!--<bae-off-featured></bae-off-featured>-->
+    <bae-off-gallery></bae-off-gallery>
     <app-platform-benefits></app-platform-benefits>  
     <!--<app-explore-dome></app-explore-dome>-->
     <!--<app-faq></app-faq>-->
