--- a/src/app/pages/seller-offerings/offerings/seller-offer/update-offer/update-offer.component.html
+++ b/src/app/pages/seller-offerings/offerings/seller-offer/update-offer/update-offer.component.html
@@ -706,7 +706,7 @@
                                             <input id="select-checkbox" [checked]="isCategorySelected(cat)" type="checkbox" value="" (click)="addCategory(cat)" class="flex w-4 h-4 justify-end text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
                                         </td>
                                     </tr>
-                                    @if(cat.children.length>0){
+                                    <!--@if(cat.children.length>0){
                                         @for(child of cat.children; track child){
                                             <tr class="hover:bg-gray-200 dark:bg-secondary-300 dark:border-gray-700 dark:hover:bg-secondary-200">
                                                 <td colspan=3>
@@ -714,7 +714,7 @@
                                                 </td>
                                             </tr>
                                         }
-                                    }
+                                    }-->
                                 } @empty {
                                     <div class="flex justify-center w-full m-4">
                                         <div class="flex w-full items-center p-4 text-sm text-primary-100 rounded-lg bg-blue-50 dark:bg-secondary-200 dark:text-primary-50" role="alert">
