REFACTORS main form. Step 4

--- a/src/app/shared/forms/markdown-textarea/markdown-textarea.component.html
+++ b/src/app/shared/forms/markdown-textarea/markdown-textarea.component.html
@@ -98,6 +98,7 @@
                   class="block w-full h-fit px-0 text-sm text-gray-800 dark:text-gray-200 bg-white dark:bg-secondary-300 border-0"
                   placeholder="Add product description..."
                   [value]="value"
+                  rows="8"
                   (input)="updateValue($event)"></textarea>
       }
       @if(showEmoji){
