--- a/src/app/shared/forms/offer/offer.component.html
+++ b/src/app/shared/forms/offer/offer.component.html
@@ -1,6 +1,9 @@
 <div class="bg-secondary-50 dark:bg-secondary-100 border border-secondary-50 dark:border-gray-800 mt-4 p-4 md:p-8 rounded-lg w-full">
 
-  <h2 class="text-3xl font-bold text-primary-100 dark:text-white pb-4">{{ 'UPDATE_OFFER._update' | translate }}</h2>
+  <h2 class="text-3xl font-bold text-primary-100 dark:text-white pb-4">
+    {{ 'UPDATE_OFFER._update' | translate }}
+  </h2>
+
   <!-- Stepper -->
   <form [formGroup]="productOfferForm">
     <ol class="flex items-start w-full text-sm font-medium text-center text-gray-500 dark:text-gray-400">
@@ -21,40 +24,62 @@
     <h3 class="block md:hidden mt-2 text-center text-2xl text-primary-100 dark:text-white pb-4">{{ this.steps[currentStep] }}</h3>
 
 
-    <!-- Step Forms -->
-    @if (currentStep === 0) {
-      <app-general-info-form [data]="offer" [formType]="formType" [form]="productOfferForm.controls['generalInfo']"></app-general-info-form>
-    } @else if (currentStep === 1) {
-      <app-prod-spec-form formControlName="prodSpec"
-                          [data]="offer"
-                          [partyId]="partyId"
+    <div class="md:p-8">
+      <!-- Step Forms -->
+      @if (currentStep === 0) {
+        <app-general-info-form [data]="offer" [formType]="formType" [form]="productOfferForm.controls['generalInfo']"></app-general-info-form>
+      } @else if (currentStep === 1) {
+        <app-prod-spec-form formControlName="prodSpec"
+                            [data]="offer"
+                            [partyId]="partyId"
 
-                          [formType]="formType">
-      </app-prod-spec-form>
-    } @else if (currentStep === 2) {
-      <app-category-form formControlName="category" [data]="offer" [formType]="formType"></app-category-form>
-    } @else if (currentStep === 3) {
-      <app-license-form [data]="offer" [formType]="formType" [form]="productOfferForm.controls['license']"></app-license-form>
-    }
+                            [formType]="formType">
+        </app-prod-spec-form>
+      } @else if (currentStep === 2) {
+        <app-category-form formControlName="category" [data]="offer" [formType]="formType"></app-category-form>
+      } @else if (currentStep === 3) {
+        <app-license-form [data]="offer" [formType]="formType" [form]="productOfferForm.controls['license']"></app-license-form>
+      } @if (currentStep === 4) {
+         <app-price-plans-form [form]="productOfferForm"></app-price-plans-form>
+      }
+    </div>
 
     <!-- Navigation Buttons -->
-    <div class="flex justify-between mt-6">
+    <div class="flex justify-end mt-6 space-x-4">
       <button (click)="goToStep(currentStep - 1)"
               [disabled]="currentStep === 0"
-              class="px-4 py-2 bg-gray-300 rounded-lg">
-        Previous
+              [ngClass]="{
+                'text-gray-500 dark:text-gray-400 hover:bg-gray-100 hover:text-gray-700 dark:hover:bg-gray-700 dark:hover:text-white': currentStep !== 0,
+                'text-gray-300 dark:text-gray-600 cursor-not-allowed': currentStep === 0
+              }"
+              class="px-4 py-2 flex items-center justify-center text-base font-medium rounded-lg  bg-white border border-gray-300 dark:bg-gray-800 dark:border-gray-700 ">
+          <svg class="min-w-4 w-4 h-4 mr-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
+            <path fill="currentColor"
+                  d="M9.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l192 192c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L77.3
+                  256 246.6 86.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-192 192z"/>
+          </svg>
+        Previous step
       </button>
 
       <button (click)="goToStep(currentStep + 1)"
               [disabled]="currentStep === steps.length - 1"
-              class="px-4 py-2 bg-blue-600 text-white rounded-lg">
-        Next
+              [ngClass]="{
+                'hover:bg-gray-100 hover:text-gray-700 dark:hover:bg-gray-700 dark:hover:text-white': currentStep !== steps.length - 1,
+                'cursor-not-allowed': currentStep === steps.length - 1
+              }"
+              class="px-4 py-2 flex items-center justify-center text-base font-medium rounded-lg text-gray-500 bg-white border border-gray-300 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400">
+        Next step
+        <svg class="min-w-4 w-4 h-4 ml-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
+          <path fill="currentColor"
+                d="M310.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L242.7
+                256 73.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z"/>
+        </svg>
       </button>
 
       <button (click)="submitForm()"
               [disabled]="!isFormValid"
-              class="px-4 py-2 bg-green-600 text-white rounded-lg">
-        Submit
+              class="px-4 py-2 bg-primary-100 hover:bg-primary-50 text-base font-medium text-white rounded-lg">
+        {{ formType === 'create' ? 'Create Offer' : 'Update Offer' }}
       </button>
     </div>
   </form>
